--- a/scss/style.scss
+++ b/scss/style.scss
@@ -6,9 +6,9 @@
 *::after {
   box-sizing: border-box;
 }
-html {
-  overflow-x: hidden;
-}
+// html {
+//   overflow-x: hidden;
+// }
 .page--disabled {
   overflow-y: hidden;
 }
