--- a/scss/style.scss
+++ b/scss/style.scss
@@ -6,9 +6,6 @@
 *::after {
   box-sizing: border-box;
 }
-// html {
-//   overflow-x: hidden;
-// }
 .page--disabled {
   overflow-y: hidden;
 }
@@ -57,7 +54,105 @@ p {
   line-height: 1;
   color: $black;
 }
+// Menu start
+.menu {
+  margin-top: 120px;
+}
+.tabs {
+  margin-top: 60px;
+}
+.tabs__nav {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  flex-wrap: wrap;
+  margin-bottom: -20px;
+}
+.tabs__nav-item {
+  margin-right: 20px;
+  margin-bottom: 20px;
+  padding: 17px 20px;
+  font-size: 26px;
+  line-height: 1;
+  border: 2px solid #008f99;
+  border-radius: 24px;
+  transition: all 0.3s;
+  cursor: pointer;
+}
+.tabs__nav-item:hover {
+  background-color: #008f99;
+  color: #fff;
+}
+.tabs__content {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-gap: 15px 20px;
+  margin-top: 60px;
+}
+.tabs__item {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-start;
+  padding: 10px;
+  max-width: 280px;
+  min-height: 465px;
+  background: linear-gradient(
+    0deg,
+    rgba(255, 255, 255, 0.2),
+    rgba(255, 255, 255, 0.2)
+  );
+  border: 1px solid #efefef;
+  border-radius: 20px;
+}
+.tabs__tag {
+  position: absolute;
+  top: 25px;
+  left: 25px;
+  padding: 5px 8px;
+  font-size: 22px;
+  line-height: 1;
+  color: #fff;
+  background: $pink;
+  border-radius: 6px;
+}
+.tabs__img {
+  display: block;
+  border-radius: 16px;
+}
+.tabs__name {
+  margin-top: 20px;
+  max-width: 250px;
+  @extend %probapro-bold;
+  font-size: 22px;
+  line-height: 1;
+  word-wrap: break-word;
+}
+.tabs__descr {
+  margin-top: 10px;
+  margin-bottom: 10px;
+  font-size: 18px;
+  color: $dark-gray;
+}
+.tabs__price {
+  margin-top: auto;
+  padding: 18px;
+  width: 100%;
+  border-radius: 16px;
+  background-color: $light-blue;
+  color: #fff;
+  text-align: center;
+  transition: all 0.3s;
+  cursor: pointer;
+}
+.tabs__price:hover {
+  background-color: $dark-blue;
+}
+// Menu end
 
+// Feedback start
+// Feedback end
 .feedback__img {
   width: 80px;
 }
