--- a/css/style.css
+++ b/css/style.css
@@ -32,7 +32,13 @@ body {
   font-weight: 400;
 }
 
-.tabs__name {
+.feedback__text-title {
+  font-family: 'ProbaPro-Medium', sans-serif;
+  font-style: normal;
+  font-weight: 500;
+}
+
+.tabs__name, .feedback__author-name {
   font-family: 'ProbaPro-Bold', sans-serif;
   font-style: normal;
   font-weight: 700;
@@ -106,7 +112,8 @@ p {
   color: #414042;
 }
 
-.menu {
+.menu,
+.feedback {
   margin-top: 120px;
 }
 
@@ -229,6 +236,89 @@ p {
   background-color: #008f99;
 }
 
+.feedback {
+  overflow-x: hidden;
+}
+
+.feedback__container {
+  overflow-x: visible;
+}
+
+.feedback__items {
+  margin-top: 60px;
+  padding-right: 20px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
+}
+
+.feedback__item {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 380px;
+          flex: 0 0 380px;
+  padding: 30px;
+  width: 380px;
+  background: -webkit-gradient(linear, left bottom, left top, from(rgba(255, 255, 255, 0.2)), to(rgba(255, 255, 255, 0.2)));
+  background: linear-gradient(0deg, rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 0.2));
+  border: 1px solid #def1ee;
+  border-radius: 20px;
+}
+
+.feedback__item + .feedback__item {
+  margin-left: 20px;
+}
+
+.feedback__top {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+}
+
 .feedback__img {
+  display: block;
   width: 80px;
+  height: 80px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  border-radius: 50%;
+}
+
+.feedback__author {
+  margin-left: 20px;
+}
+
+.feedback__author-name {
+  font-size: 24px;
+  line-height: 1;
+}
+
+.feedback__author-descr {
+  margin-top: 10px;
+  font-size: 20px;
+  color: #9e9a9a;
+}
+
+.feedback__text {
+  margin-top: 40px;
+  font-size: 18px;
+}
+
+.feedback__text-title {
+  display: block;
+  font-size: 20px;
+  margin-bottom: 20px;
 }
