--- a/css/style.css
+++ b/css/style.css
@@ -240,6 +240,11 @@ p {
   overflow-x: hidden;
 }
 
+.feedback__wrapper {
+  -webkit-clip-path: inset(-100vw -20vw -100vw 0);
+  clip-path: inset(-100vw -20vw -100vw 0);
+}
+
 .feedback__items {
   margin-top: 60px;
 }
