--- a/css/style.css
+++ b/css/style.css
@@ -311,3 +311,23 @@ p {
   font-size: 20px;
   margin-bottom: 20px;
 }
+
+.instagram {
+  margin-top: 120px;
+}
+
+.instagram__items {
+  margin-top: 60px;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[4];
+      grid-template-columns: repeat(4, 1fr);
+  grid-gap: 20px;
+}
+
+.instagram__img {
+  display: block;
+  -o-object-fit: cover;
+     object-fit: cover;
+  border-radius: 20px;
+}
