--- a/css/style.css
+++ b/css/style.css
@@ -32,7 +32,29 @@ body {
   font-weight: 400;
 }
 
-.feedback__text-title {
+.tabs__price, .feedback__text-title, .form__input::-webkit-input-placeholder,
+.form__textarea::-webkit-input-placeholder, .form__btn {
+  font-family: 'ProbaPro-Medium', sans-serif;
+  font-style: normal;
+  font-weight: 500;
+}
+
+.tabs__price, .feedback__text-title, .form__input:-ms-input-placeholder,
+.form__textarea:-ms-input-placeholder, .form__btn {
+  font-family: 'ProbaPro-Medium', sans-serif;
+  font-style: normal;
+  font-weight: 500;
+}
+
+.tabs__price, .feedback__text-title, .form__input::-ms-input-placeholder,
+.form__textarea::-ms-input-placeholder, .form__btn {
+  font-family: 'ProbaPro-Medium', sans-serif;
+  font-style: normal;
+  font-weight: 500;
+}
+
+.tabs__price, .feedback__text-title, .form__input::placeholder,
+.form__textarea::placeholder, .form__btn {
   font-family: 'ProbaPro-Medium', sans-serif;
   font-style: normal;
   font-weight: 500;
@@ -44,7 +66,7 @@ body {
   font-weight: 700;
 }
 
-.title {
+.title, .form__title {
   font-family: 'FuturaPT-Bold', sans-serif;
   font-style: normal;
   font-weight: 700;
@@ -223,10 +245,10 @@ p {
   margin-top: auto;
   padding: 18px;
   width: 100%;
-  border-radius: 16px;
-  background-color: #6cbab8;
   color: #fff;
   text-align: center;
+  border-radius: 16px;
+  background-color: #6cbab8;
   -webkit-transition: all 0.3s;
   transition: all 0.3s;
   cursor: pointer;
@@ -330,4 +352,126 @@ p {
   -o-object-fit: cover;
      object-fit: cover;
   border-radius: 20px;
+}
+
+.about {
+  margin-top: 120px;
+}
+
+.about__inner {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  gap: 100px;
+}
+
+.form__title {
+  font-size: 36px;
+  line-height: 1;
+  color: #414042;
+}
+
+.about__text {
+  margin-top: 60px;
+  width: 589px;
+  max-width: 100%;
+  font-size: 24px;
+  line-height: 1;
+  color: #717171;
+}
+
+.form {
+  width: 480px;
+  max-width: 100%;
+  padding: 73px 80px 51px 80px;
+  background: -webkit-gradient(linear, left bottom, left top, from(rgba(255, 255, 255, 0.2)), to(rgba(255, 255, 255, 0.2)));
+  background: linear-gradient(0deg, rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 0.2));
+  border: 1px solid #def1ee;
+  border-radius: 20px;
+}
+
+.form__input {
+  margin-top: 40px;
+  padding: 11px 20px;
+  width: 100%;
+  height: 40px;
+  font-size: 18px;
+  line-height: 1;
+  background: rgba(255, 255, 255, 0.2);
+  border: 1px solid #6cbab8;
+  border-radius: 10px;
+}
+
+.form__input + .form__input {
+  margin-top: 20px;
+}
+
+.form__textarea {
+  margin-top: 20px;
+  padding: 11px 20px;
+  width: 100%;
+  height: 77px;
+  font-size: 18px;
+  line-height: 1;
+  background: rgba(255, 255, 255, 0.2);
+  border: 1px solid #6cbab8;
+  border-radius: 10px;
+  resize: none;
+}
+
+.form__input::-webkit-input-placeholder,
+.form__textarea::-webkit-input-placeholder {
+  color: #9e9a9a;
+}
+
+.form__input:-ms-input-placeholder,
+.form__textarea:-ms-input-placeholder {
+  color: #9e9a9a;
+}
+
+.form__input::-ms-input-placeholder,
+.form__textarea::-ms-input-placeholder {
+  color: #9e9a9a;
+}
+
+.form__input::placeholder,
+.form__textarea::placeholder {
+  color: #9e9a9a;
+}
+
+.form__input:focus,
+.form__textarea:focus,
+.form__btn:focus {
+  outline: 1px solid #008f99;
+}
+
+.form__btn {
+  margin-top: 23px;
+  width: 100%;
+  height: 60px;
+  font-size: 22px;
+  line-height: 1;
+  text-align: center;
+  color: #fff;
+  text-transform: uppercase;
+  background: #6cbab8;
+  border-radius: 10px;
+  border: none;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+  cursor: pointer;
+}
+
+.form__btn:hover {
+  background-color: #008f99;
+}
+
+.footer {
+  margin-top: 120px;
 }
