--- a/scss/style.scss
+++ b/scss/style.scss
@@ -140,10 +140,11 @@ p {
   margin-top: auto;
   padding: 18px;
   width: 100%;
-  border-radius: 16px;
-  background-color: $light-blue;
+  @extend %probapro-medium;
   color: #fff;
   text-align: center;
+  border-radius: 16px;
+  background-color: $light-blue;
   transition: all 0.3s;
   cursor: pointer;
 }
@@ -231,3 +232,102 @@ p {
   border-radius: 20px;
 }
 // Instagram end
+
+// About us start
+.about {
+  margin-top: 120px;
+}
+.about__inner {
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+  gap: 100px;
+}
+.form__title {
+  @extend %futurapt-bold;
+  font-size: 36px;
+  line-height: 1;
+  color: $black;
+}
+.about__text {
+  margin-top: 60px;
+  width: 589px;
+  max-width: 100%;
+  font-size: 24px;
+  line-height: 1;
+  color: #717171;
+}
+.form {
+  width: 480px;
+  max-width: 100%;
+  padding: 73px 80px 51px 80px;
+  background: linear-gradient(
+    0deg,
+    rgba(255, 255, 255, 0.2),
+    rgba(255, 255, 255, 0.2)
+  );
+  border: 1px solid #def1ee;
+  border-radius: 20px;
+}
+.form__input {
+  margin-top: 40px;
+  padding: 11px 20px;
+  width: 100%;
+  height: 40px;
+  font-size: 18px;
+  line-height: 1;
+  background: rgba(255, 255, 255, 0.2);
+  border: 1px solid #6cbab8;
+  border-radius: 10px;
+}
+.form__input + .form__input {
+  margin-top: 20px;
+}
+.form__textarea {
+  margin-top: 20px;
+  padding: 11px 20px;
+  width: 100%;
+  height: 77px;
+  font-size: 18px;
+  line-height: 1;
+  background: rgba(255, 255, 255, 0.2);
+  border: 1px solid #6cbab8;
+  border-radius: 10px;
+  resize: none;
+}
+.form__input::placeholder,
+.form__textarea::placeholder {
+  @extend %probapro-medium;
+  color: $dark-gray;
+}
+.form__input:focus,
+.form__textarea:focus,
+.form__btn:focus {
+  outline: 1px solid $dark-blue;
+}
+.form__btn {
+  margin-top: 23px;
+  width: 100%;
+  height: 60px;
+  @extend %probapro-medium;
+  font-size: 22px;
+  line-height: 1;
+  text-align: center;
+  color: #fff;
+  text-transform: uppercase;
+  background: $light-blue;
+  border-radius: 10px;
+  border: none;
+  transition: all 0.3s;
+  cursor: pointer;
+}
+.form__btn:hover {
+  background-color: $dark-blue;
+}
+// About us end
+
+// Footer start
+.footer {
+  margin-top: 120px;
+}
+// Footer end
