--- a/scss/style.scss
+++ b/scss/style.scss
@@ -329,5 +329,44 @@ p {
 // Footer start
 .footer {
   margin-top: 120px;
+  padding: 38px 0 39px;
+  background: linear-gradient(
+    0deg,
+    rgba(255, 255, 255, 0.2),
+    rgba(255, 255, 255, 0.2)
+  );
+  border: 1px solid #efefef;
+}
+.footer__inner {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 10px;
+}
+.footer__links {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  @extend %probapro-bold;
+  font-size: 14px;
+  line-height: 1;
+  text-transform: uppercase;
+}
+.footer__link {
+  transition: all 0.3s;
+}
+.footer__link:hover {
+  color: $dark-blue;
+}
+.footer__item + .footer__item {
+  margin-left: 30px;
+}
+.footer__social {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+}
+.footer__social-item + .footer__social-item {
+  margin-left: 10px;
 }
 // Footer end
