--- a/scss/vars.scss
+++ b/scss/vars.scss
@@ -1,7 +1,7 @@
 $black: #414042;
 $light-blue: #6cbab8;
 $dark-blue: #008f99;
-$pink: #ff8181;
+$orange: #ff7a50;
 $light-gray: #efefef;
 $dark-gray: #9e9a9a;
 
