--- a/css/style.css
+++ b/css/style.css
@@ -60,7 +60,7 @@ body {
   font-weight: 500;
 }
 
-.tabs__name, .feedback__author-name, .footer__links {
+.header__list, .tabs__name, .feedback__author-name, .footer__links {
   font-family: 'ProbaPro-Bold', sans-serif;
   font-style: normal;
   font-weight: 700;
@@ -132,6 +132,126 @@ p {
   font-size: 48px;
   line-height: 1;
   color: #414042;
+}
+
+.header {
+  padding: 16px 0;
+  background: #ffffff;
+  -webkit-box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.05);
+          box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.05);
+}
+
+.header__inner {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.header__nav {
+  margin-right: auto;
+  margin-left: 52px;
+}
+
+.header__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  font-size: 14px;
+  line-height: 1;
+  text-transform: uppercase;
+}
+
+.header__item + .header__item {
+  margin-left: 40px;
+}
+
+.header__link {
+  -webkit-transition: color 0.3s ease;
+  transition: color 0.3s ease;
+}
+
+.header__link:hover {
+  color: #008f99;
+}
+
+.header__link--phone {
+  color: #008f99;
+}
+
+.header__link--phone:hover {
+  color: #414042;
+}
+
+.header__right {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+}
+
+.header__input {
+  padding: 8px;
+  padding-left: 40px;
+  width: 160px;
+  height: 40px;
+  background: #ffffff url("/images/icons/search-icon.svg") no-repeat 10px 50%;
+  font-size: 16px;
+  line-height: 1;
+  border: 1px solid #f2f2f2;
+  border-radius: 10px;
+}
+
+.header__input::-webkit-input-placeholder {
+  color: #9e9ea6;
+}
+
+.header__input:-ms-input-placeholder {
+  color: #9e9ea6;
+}
+
+.header__input::-ms-input-placeholder {
+  color: #9e9ea6;
+}
+
+.header__input::placeholder {
+  color: #9e9ea6;
+}
+
+.header__input:focus {
+  outline: #6cbab8;
+  border: 1px solid #6cbab8;
+}
+
+.header__cart {
+  margin-left: 20px;
+  width: 40px;
+  height: 40px;
+  background: #008f99 url("/images/icons/cart-icon.svg") no-repeat 50% 50%;
+  border-radius: 10px;
+  cursor: pointer;
+  -webkit-transition: background 0.3s ease;
+  transition: background 0.3s ease;
+}
+
+.header__cart:hover {
+  background: #6cbab8 url("/images/icons/cart-icon.svg") no-repeat 50% 50%;
 }
 
 .menu,
