--- a/scss/style.scss
+++ b/scss/style.scss
@@ -54,6 +54,82 @@ p {
   line-height: 1;
   color: $black;
 }
+
+// Header start
+.header {
+  padding: 16px 0;
+  background: #ffffff;
+  box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.05);
+}
+.header__inner {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.header__nav {
+  margin-right: auto;
+  margin-left: 52px;
+}
+.header__list {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  @extend %probapro-bold;
+  font-size: 14px;
+  line-height: 1;
+  text-transform: uppercase;
+}
+.header__item + .header__item {
+  margin-left: 40px;
+}
+.header__link {
+  transition: color 0.3s ease;
+}
+.header__link:hover {
+  color: $dark-blue;
+}
+.header__link--phone {
+  color: $dark-blue;
+}
+.header__link--phone:hover {
+  color: $black;
+}
+.header__right {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+}
+.header__input {
+  padding: 8px;
+  padding-left: 40px;
+  width: 160px;
+  height: 40px;
+  background: #ffffff url('/images/icons/search-icon.svg') no-repeat 10px 50%;
+  font-size: 16px;
+  line-height: 1;
+  border: 1px solid #f2f2f2;
+  border-radius: 10px;
+}
+.header__input::placeholder {
+  color: #9e9ea6;
+}
+.header__input:focus {
+  outline: $light-blue;
+  border: 1px solid $light-blue;
+}
+.header__cart {
+  margin-left: 20px;
+  width: 40px;
+  height: 40px;
+  background: $dark-blue url('/images/icons/cart-icon.svg') no-repeat 50% 50%;
+  border-radius: 10px;
+  cursor: pointer;
+  transition: background 0.3s ease;
+}
+.header__cart:hover {
+  background: $light-blue url('/images/icons/cart-icon.svg') no-repeat 50% 50%;
+}
+// Header end
 // Menu start
 .menu,
 .feedback {
