--- a/scss/style.scss
+++ b/scss/style.scss
@@ -49,10 +49,12 @@ p {
   margin-right: calc(50% - 50vw);
 }
 .title {
+  padding-bottom: 12px;
   @extend %futurapt-bold;
   font-size: 48px;
   line-height: 1;
   color: $black;
+  border-bottom: 1px solid rgba(108, 186, 184, 0.4);
 }
 
 // Header start
@@ -195,6 +197,84 @@ p {
 // Process start
 .process {
   margin-top: 120px;
+}
+.process__items {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  margin-top: 60px;
+  gap: 80px 220px;
+}
+.process__item:nth-child(3) {
+  grid-column-start: span 2;
+}
+.process__item {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  padding: 32px 38px 32px 50px;
+  background-color: #fff;
+  border: 1px solid #def1ee;
+  border-radius: 20px;
+}
+.process__item--long {
+  align-items: flex-start;
+}
+.process__number {
+  @extend %futurapt-bold;
+  font-size: 96px;
+  line-height: 1;
+  color: $light-blue;
+}
+.process__text {
+  margin-left: 20px;
+}
+.process__text--long {
+  width: 700px;
+  max-width: 100%;
+}
+.process__text-title {
+  margin-bottom: 24px;
+  @extend %futurapt-bold;
+  font-size: 32px;
+  line-height: 1.28;
+}
+.process__img {
+  margin-left: auto;
+}
+.process__item::after {
+  position: absolute;
+  content: '';
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 100% 100%;
+  z-index: -1;
+}
+.process__item:first-child::after {
+  left: 100%;
+  width: 222px;
+  height: 2px;
+  background-image: url('/images/icons/process-line-1.svg');
+}
+.process__item:nth-child(2)::after {
+  right: 50%;
+  top: 100%;
+  width: 700px;
+  height: 82px;
+  background-image: url('/images/icons/process-line-2.svg');
+}
+.process__item:nth-child(4)::after {
+  right: 50%;
+  bottom: 100%;
+  width: 2px;
+  height: 82px;
+  background-image: url('/images/icons/process-line-3.svg');
+}
+.process__item:last-child::after {
+  right: 100%;
+  width: 222px;
+  height: 2px;
+  background-image: url('/images/icons/process-line-1.svg');
 }
 // Process end
 
