--- a/css/style.css
+++ b/css/style.css
@@ -281,6 +281,7 @@ p {
 
 .stories {
   margin-top: 100px;
+  overflow-x: hidden;
 }
 
 .stories__items {
@@ -438,7 +439,7 @@ p {
 }
 
 .tabs {
-  margin-top: 60px;
+  margin-top: 50px;
 }
 
 .tabs__nav {
@@ -462,8 +463,8 @@ p {
   padding: 17px 20px;
   font-size: 26px;
   line-height: 1;
-  border: 2px solid #008f99;
-  border-radius: 24px;
+  border: 2px solid #6cbab8;
+  border-radius: 10px;
   -webkit-transition: all 0.3s;
   transition: all 0.3s;
   cursor: pointer;
@@ -471,11 +472,13 @@ p {
 
 .tabs__nav-item:hover {
   background-color: #008f99;
+  border: 2px solid #008f99;
   color: #fff;
 }
 
 .tabs__nav-item--active {
   background-color: #008f99;
+  border: 2px solid #008f99;
   color: #fff;
   cursor: default;
 }
@@ -514,7 +517,6 @@ p {
   background: -webkit-gradient(linear, left bottom, left top, from(rgba(255, 255, 255, 0.2)), to(rgba(255, 255, 255, 0.2)));
   background: linear-gradient(0deg, rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 0.2));
   border: 1px solid #efefef;
-  border-radius: 20px;
 }
 
 .tabs__tag {
@@ -526,12 +528,10 @@ p {
   line-height: 1;
   color: #fff;
   background: #ff7a50;
-  border-radius: 6px;
 }
 
 .tabs__img {
   display: block;
-  border-radius: 16px;
 }
 
 .tabs__name {
@@ -553,17 +553,32 @@ p {
   margin-top: auto;
   padding: 18px;
   width: 100%;
+  font-size: 22px;
   color: #fff;
   text-align: center;
-  border-radius: 16px;
-  background-color: #6cbab8;
+  background-color: #008f99;
   -webkit-transition: all 0.3s;
   transition: all 0.3s;
   cursor: pointer;
 }
 
 .tabs__price:hover {
-  background-color: #008f99;
+  background-color: #6cbab8;
+}
+
+.tabs__price--old {
+  margin-left: 10px;
+  font-size: 18px;
+  color: #e9e3e3;
+  text-decoration: line-through;
+}
+
+.tabs__price--discount {
+  background-color: #ff7a50;
+}
+
+.tabs__price--discount:hover {
+  background-color: #ffa183;
 }
 
 .feedback__container {
