--- a/css/style.css
+++ b/css/style.css
@@ -280,8 +280,9 @@ p {
 }
 
 .stories {
-  margin-top: 100px;
+  margin-top: 90px;
   overflow-x: hidden;
+  overflow-y: visible;
 }
 
 .stories__items {
@@ -294,6 +295,7 @@ p {
   -webkit-box-pack: start;
       -ms-flex-pack: start;
           justify-content: flex-start;
+  padding: 10px;
 }
 
 .stories__item {
@@ -329,7 +331,7 @@ p {
 }
 
 .process {
-  margin-top: 120px;
+  margin-top: 110px;
 }
 
 .process__items {
