--- a/css/style.css
+++ b/css/style.css
@@ -593,10 +593,21 @@ p {
   width: 471px;
   background: #def1ee;
   border: 1px solid #def1ee;
+  -webkit-transform: scale(0.66);
+          transform: scale(0.66);
+  -webkit-transform-origin: center 0;
+          transform-origin: center 0;
+  background: #fff;
   -webkit-transition: background 0.3s ease, -webkit-transform 0.3s ease, -webkit-transform-origin 0.3s ease;
   transition: background 0.3s ease, -webkit-transform 0.3s ease, -webkit-transform-origin 0.3s ease;
   transition: transform 0.3s ease, background 0.3s ease, transform-origin 0.3s ease;
   transition: transform 0.3s ease, background 0.3s ease, transform-origin 0.3s ease, -webkit-transform 0.3s ease, -webkit-transform-origin 0.3s ease;
+}
+
+.feedback__item.swiper-slide-active {
+  background-color: #def1ee;
+  -webkit-transform: scale(1);
+          transform: scale(1);
 }
 
 .feedback__item.swiper-slide-active::before {
@@ -618,7 +629,6 @@ p {
           transform: scale(0.66);
   -webkit-transform-origin: 0 0;
           transform-origin: 0 0;
-  background: #fff;
 }
 
 .feedback__item.swiper-slide-prev {
