--- a/css/style.css
+++ b/css/style.css
@@ -247,6 +247,7 @@ p {
   height: 40px;
   background: #008f99 url("/images/icons/cart-icon.svg") no-repeat 50% 50%;
   border-radius: 10px;
+  border: none;
   cursor: pointer;
   -webkit-transition: background 0.3s ease;
   transition: background 0.3s ease;
@@ -454,6 +455,7 @@ p {
   padding: 17px 20px;
   font-size: 26px;
   line-height: 1;
+  background-color: #fff;
   border: 2px solid #6cbab8;
   border-radius: 10px;
   -webkit-transition: all 0.3s;
@@ -548,6 +550,7 @@ p {
   color: #fff;
   text-align: center;
   background-color: #008f99;
+  border: none;
   -webkit-transition: all 0.3s;
   transition: all 0.3s;
   cursor: pointer;
