--- a/css/style.css
+++ b/css/style.css
@@ -307,8 +307,8 @@ p {
 }
 
 .stories__item--active {
-  -webkit-box-shadow: 0px 0px 0px 7px #ff7a50, 0px 0px 0px 3px #fff inset;
-          box-shadow: 0px 0px 0px 7px #ff7a50, 0px 0px 0px 3px #fff inset;
+  -webkit-box-shadow: 0px 0px 0px 3px #fff, 0px 0px 0px 10px #ff7a50;
+          box-shadow: 0px 0px 0px 3px #fff, 0px 0px 0px 10px #ff7a50;
 }
 
 .stories__title {
