--- a/css/style.css
+++ b/css/style.css
@@ -33,28 +33,28 @@ body {
 }
 
 .tabs__price, .feedback__text-title, .form__input::-webkit-input-placeholder,
-.form__textarea::-webkit-input-placeholder, .form__btn {
+.form__textarea::-webkit-input-placeholder, .form__btn, .cart__name, .card__amount-number {
   font-family: 'ProbaPro-Medium', sans-serif;
   font-style: normal;
   font-weight: 500;
 }
 
 .tabs__price, .feedback__text-title, .form__input:-ms-input-placeholder,
-.form__textarea:-ms-input-placeholder, .form__btn {
+.form__textarea:-ms-input-placeholder, .form__btn, .cart__name, .card__amount-number {
   font-family: 'ProbaPro-Medium', sans-serif;
   font-style: normal;
   font-weight: 500;
 }
 
 .tabs__price, .feedback__text-title, .form__input::-ms-input-placeholder,
-.form__textarea::-ms-input-placeholder, .form__btn {
+.form__textarea::-ms-input-placeholder, .form__btn, .cart__name, .card__amount-number {
   font-family: 'ProbaPro-Medium', sans-serif;
   font-style: normal;
   font-weight: 500;
 }
 
 .tabs__price, .feedback__text-title, .form__input::placeholder,
-.form__textarea::placeholder, .form__btn {
+.form__textarea::placeholder, .form__btn, .cart__name, .card__amount-number {
   font-family: 'ProbaPro-Medium', sans-serif;
   font-style: normal;
   font-weight: 500;
@@ -66,7 +66,7 @@ body {
   font-weight: 700;
 }
 
-.title, .hero__title, .process__number, .process__text-title, .form__title {
+.title, .hero__title, .process__number, .process__text-title, .form__title, .cart__title {
   font-family: 'FuturaPT-Bold', sans-serif;
   font-style: normal;
   font-weight: 700;
@@ -922,4 +922,227 @@ p {
 
 .footer__social-item + .footer__social-item {
   margin-left: 10px;
+}
+
+.cart {
+  position: absolute;
+  top: 0;
+  right: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  padding: 30px;
+  width: 610px;
+  max-width: 100%;
+  min-height: 1000px;
+  background-color: #fff;
+  z-index: 12;
+}
+
+.cart__title {
+  font-size: 50px;
+  line-height: 1.28;
+  color: #008f99;
+}
+
+.cart__items {
+  margin-top: 60px;
+  width: 100%;
+}
+
+.cart__item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.cart__item + .cart__item {
+  margin-top: 20px;
+}
+
+.cart__img {
+  width: 80px;
+  height: 80px;
+  border-radius: 20px;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.cart__info {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  margin-left: 20px;
+  margin-right: auto;
+}
+
+.cart__name {
+  -ms-flex-preferred-size: 100%;
+      flex-basis: 100%;
+  font-size: 22px;
+  line-height: 1;
+}
+
+.cart__number {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  width: 105px;
+}
+
+.cart__price {
+  margin-top: 24px;
+  font-size: 15px;
+  line-height: 1;
+}
+
+.cart__weight {
+  margin-top: 24px;
+  margin-left: 20px;
+  font-size: 15px;
+  line-height: 1;
+  color: #b4b4b4;
+}
+
+.cart__remove,
+.cart__add {
+  width: 30px;
+  height: 30px;
+  background: #6cbab8 no-repeat center;
+  border-radius: 8px;
+  cursor: pointer;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+}
+
+.cart__remove:hover,
+.cart__add:hover {
+  background-color: #008f99;
+}
+
+.cart__remove {
+  background-image: url("/images/icons/minus.svg");
+  background-size: 12px 2px;
+}
+
+.cart__add {
+  background-image: url("/images/icons/plus.svg");
+  background-size: 14px 14px;
+}
+
+.cart__input {
+  width: 30px;
+  padding: 0 5px;
+  font-size: 22px;
+  line-height: 1;
+  text-align: center;
+  border: none;
+}
+
+.card__bottom {
+  position: relative;
+  margin-top: auto;
+  padding-top: 40px;
+  width: 100%;
+}
+
+.card__bottom::before {
+  position: absolute;
+  content: '';
+  top: 0;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+  width: 370px;
+  max-width: 90%;
+  height: 1px;
+  background-color: #6cbab8;
+}
+
+.cart__amount {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.card__amount-text {
+  font-size: 22px;
+  line-height: 1;
+}
+
+.card__amount-number {
+  font-size: 30px;
+  line-height: 1;
+}
+
+.card__btn {
+  display: block;
+  margin-top: 40px;
+  margin-left: auto;
+  margin-right: auto;
+  width: 370px;
+  max-width: 100%;
+  height: 60px;
+  background: #008f99;
+  font-size: 22px;
+  line-height: 1;
+  text-transform: uppercase;
+  color: #fff;
+  border: none;
+  -webkit-box-shadow: inset 0px 0px 4px rgba(0, 0, 0, 0.04);
+          box-shadow: inset 0px 0px 4px rgba(0, 0, 0, 0.04);
+  cursor: pointer;
+  -webkit-transition: background 0.3s ease;
+  transition: background 0.3s ease;
+}
+
+.card__btn:hover {
+  background: #6cbab8;
+}
+
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 11;
 }
