--- a/scss/style.scss
+++ b/scss/style.scss
@@ -59,9 +59,14 @@ p {
 
 // Header start
 .header {
+  position: sticky;
+  top: 0;
+  left: 0;
+  right: 0;
   padding: 16px 0;
   background: #ffffff;
   box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.05);
+  z-index: 12;
 }
 .header__inner {
   display: flex;
@@ -194,7 +199,7 @@ p {
 
 // Process start
 .process {
-  margin-top: 110px;
+  padding-top: 110px;
 }
 .process__items {
   display: grid;
@@ -279,7 +284,7 @@ p {
 // Menu start
 .menu,
 .feedback {
-  margin-top: 120px;
+  padding-top: 120px;
 }
 .tabs {
   margin-top: 50px;
@@ -453,7 +458,7 @@ p {
   background-position: center;
   background-size: contain;
   cursor: pointer;
-  z-index: 12;
+  z-index: 11;
 }
 .feedback__prev.swiper-button-disabled,
 .feedback__next.swiper-button-disabled {
@@ -528,7 +533,7 @@ p {
 
 // About us start
 .about {
-  margin-top: 120px;
+  padding-top: 120px;
 }
 .about__inner {
   display: flex;
@@ -666,9 +671,10 @@ p {
 
 // Cart start
 .cart {
-  position: absolute;
+  position: fixed;
   top: 0;
   right: 0;
+  bottom: 0;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -676,9 +682,9 @@ p {
   padding: 30px;
   width: 610px;
   max-width: 100%;
-  min-height: 1000px;
+  // min-height: 1000px;
   background-color: #fff;
-  z-index: 12;
+  z-index: 14;
 }
 .cart__title {
   @extend %futurapt-bold;
@@ -824,6 +830,6 @@ p {
   bottom: 0;
   width: 100%;
   height: 100%;
-  z-index: 11;
+  z-index: 13;
 }
 // Cart end
