--- a/css/style.css
+++ b/css/style.css
@@ -32,41 +32,41 @@ body {
   font-weight: 400;
 }
 
-.tabs__price, .feedback__text-title, .form__input::-webkit-input-placeholder,
+.process__text, .tabs__price, .feedback__text-title, .form__input::-webkit-input-placeholder,
 .form__textarea::-webkit-input-placeholder, .form__btn, .cart__name, .cart__amount-number {
   font-family: 'ProbaPro-Medium', sans-serif;
   font-style: normal;
   font-weight: 500;
 }
 
-.tabs__price, .feedback__text-title, .form__input:-ms-input-placeholder,
+.process__text, .tabs__price, .feedback__text-title, .form__input:-ms-input-placeholder,
 .form__textarea:-ms-input-placeholder, .form__btn, .cart__name, .cart__amount-number {
   font-family: 'ProbaPro-Medium', sans-serif;
   font-style: normal;
   font-weight: 500;
 }
 
-.tabs__price, .feedback__text-title, .form__input::-ms-input-placeholder,
+.process__text, .tabs__price, .feedback__text-title, .form__input::-ms-input-placeholder,
 .form__textarea::-ms-input-placeholder, .form__btn, .cart__name, .cart__amount-number {
   font-family: 'ProbaPro-Medium', sans-serif;
   font-style: normal;
   font-weight: 500;
 }
 
-.tabs__price, .feedback__text-title, .form__input::placeholder,
+.process__text, .tabs__price, .feedback__text-title, .form__input::placeholder,
 .form__textarea::placeholder, .form__btn, .cart__name, .cart__amount-number {
   font-family: 'ProbaPro-Medium', sans-serif;
   font-style: normal;
   font-weight: 500;
 }
 
-.header__list, .stories__title, .tabs__name, .feedback__author-name, .footer__links, .text__title, .card__price {
+.header__list, .stories__title, .process__text-title, .tabs__name, .feedback__author-name, .form__title, .footer__links, .text__title, .card__price {
   font-family: 'ProbaPro-Bold', sans-serif;
   font-style: normal;
   font-weight: 700;
 }
 
-.title, .hero__title, .process__number, .process__text-title, .form__title, .cart__title, .card__title {
+.title, .hero__title, .process__number, .cart__title, .card__title {
   font-family: 'FuturaPT-Bold', sans-serif;
   font-style: normal;
   font-weight: 700;
@@ -390,6 +390,8 @@ p {
 
 .process__img {
   margin-left: auto;
+  -webkit-transform: rotate(-20deg);
+          transform: rotate(-20deg);
 }
 
 .process__item::after {
@@ -531,11 +533,13 @@ p {
 
 .tabs__img {
   display: block;
+  max-width: 100%;
 }
 
 .tabs__name {
   margin-top: 20px;
-  max-width: 250px;
+  width: 250px;
+  max-width: 100%;
   font-size: 22px;
   line-height: 1;
   word-wrap: break-word;
@@ -742,6 +746,7 @@ p {
 
 .instagram__img {
   display: block;
+  width: 100%;
   -o-object-fit: cover;
      object-fit: cover;
 }
@@ -760,7 +765,7 @@ p {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  gap: 100px;
+  gap: 10px;
 }
 
 .about__title {
@@ -1352,4 +1357,134 @@ p {
   text-transform: uppercase;
   color: #fff;
   cursor: pointer;
+}
+
+@media (max-width: 1200px) {
+  .feedback__swiper {
+    margin-top: 22px;
+    width: 386px;
+  }
+  .feedback__item {
+    padding: 15px 36px 30px;
+  }
+  .feedback__author-name {
+    margin-top: 15px;
+  }
+  .feedback__author-descr {
+    margin-top: 10px;
+  }
+  .feedback__text {
+    margin-top: 25px;
+    font-size: 18px;
+  }
+  .feedback__text-title {
+    font-size: 22px;
+    margin-bottom: 15px;
+  }
+  .about__left {
+    width: 410px;
+    max-width: 100%;
+  }
+  .form {
+    padding: 80px;
+  }
+}
+
+@media (max-width: 1024px) {
+  .title {
+    padding-bottom: 8px;
+  }
+  .hero {
+    background: #def1ee url(/images/content/hero-bg.png) no-repeat calc(50vw + 50px) 100%;
+  }
+  .stories,
+  .instagram {
+    margin-top: 80px;
+  }
+  .stories__item {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 0 230px;
+            flex: 0 0 230px;
+    width: 230px;
+    height: 230px;
+    background-size: cover;
+  }
+  .stories__item + .stories__item {
+    margin-left: 16px;
+  }
+  .stories__item--active {
+    -webkit-box-shadow: 0px 0px 0px 2px #fff, 0px 0px 0px 5px #ff7a50;
+            box-shadow: 0px 0px 0px 2px #fff, 0px 0px 0px 5px #ff7a50;
+    margin-right: 5px;
+  }
+  .stories__item--active + .stories__item--active {
+    margin-left: 21px;
+  }
+  .stories__title {
+    width: 200px;
+  }
+  .process,
+  .menu,
+  .feedback,
+  .about {
+    padding-top: 80px;
+  }
+  .process__items {
+    gap: 60px 16px;
+  }
+  .process__item {
+    padding: 32px 41px 32px 30px;
+  }
+  .process__item--long {
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    padding-left: 30px;
+    padding-right: 20px;
+  }
+  .process__img {
+    -ms-flex-item-align: center;
+        -ms-grid-row-align: center;
+        align-self: center;
+    margin-left: -20px;
+  }
+  .process__text--long {
+    margin-right: auto;
+    width: 554px;
+  }
+  .process__text-title {
+    display: inline-block;
+    margin-bottom: 20px;
+    white-space: nowrap;
+  }
+  .process__item:first-child::after {
+    left: 87%;
+  }
+  .process__item:nth-child(2)::after {
+    width: 491px;
+    height: 60px;
+  }
+  .tabs {
+    margin-top: 40px;
+  }
+  .tabs__nav-item {
+    padding: 17px;
+  }
+  .tabs__content {
+    grid-gap: 13px 16px;
+    margin-top: 40px;
+  }
+  .tabs__item {
+    max-width: 230px;
+  }
+  .instagram__items {
+    margin-top: 40px;
+    grid-gap: 16px;
+  }
+  .footer {
+    margin-top: 80px;
+  }
+  .footer__item + .footer__item {
+    margin-left: 20px;
+  }
 }
